se añade al menu seccion de convenios #13

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,6 +27,11 @@
       "lista_tipomovilidad": "lista tipomovilidad",
       "crud_tipomovilidad": "Crud tipomovilidad"
     },
+    "convenio": {
+      "convenio": "convenio",
+      "lista_convenio": "lista convenio",
+      "crud_convenio": "Crud convenio"
+    },
   
     "auth": {
       "auth": "Autenticacion",
