se crea vistas de convenio

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,6 +27,31 @@
       "lista_tipomovilidad": "lista tipomovilidad",
       "crud_tipomovilidad": "Crud tipomovilidad"
     },
+    "naturaleza": {
+      "naturaleza": "naturaleza",
+      "lista_naturaleza": "lista naturaleza",
+      "crud_naturaleza": "Crud naturaleza"
+    },
+    "entidad": {
+      "entidad": "entidad",
+      "lista_entidad": "lista entidad",
+      "crud_entidad": "Crud entidad"
+    },
+    "estados": {
+      "estados": "estados",
+      "lista_estados": "lista estados",
+      "crud_estados": "Crud estados"
+    },
+    "paiscategoria": {
+      "paiscategoria": "paiscategoria",
+      "lista_paiscategoria": "lista paiscategoria",
+      "crud_paiscategoria": "Crud paiscategoria"
+    },
+    "categoria": {
+      "categoria": "categoria",
+      "lista_categoria": "lista categoria",
+      "crud_categoria": "Crud categoria"
+    },
     "convenio": {
       "convenio": "convenio",
       "lista_convenio": "lista convenio",
@@ -48,34 +73,92 @@
     "placeholder_id": "ej: id",
     "presupuesto": "presupuesto",
     "placeholder_presupuesto": "ej: presupuesto",
-    "fechainicio": "fechainicio",
-    "placeholder_fechainicio": "ej: fechainicio",
-    "fechafinal": "fechafinal",
-    "placeholder_fechafinal": "ej: fechafinal",
+    "fechainicio": "fecha inicio",
+    "placeholder_fechainicio": "ej: fecha inicio",
+    "fechafinal": "fecha final",
+    "placeholder_fechafinal": "ej: fecha final",
     "persona": "persona",
     "placeholder_persona": "ej: persona",
     "convenio": "convenio",
     "placeholder_convenio": "ej: convenio",
-    "idtipomovilidad": "idtipomovilidad",
-    "placeholder_idtipomovilidad": "ej: idtipomovilidad",
-    "idtipocategoria": "idtipocategoria",
-    "placeholder_idtipocategoria": "ej: idtipocategoria",
-    "tipocategoria": "tipocategoria",
-    "placeholder_tipocategoria": "ej: tipocategoria",
-    "nombre": "nombre",
-    "placeholder_nombre": "ej: nombre",
-    "descripcion": "descripcion",
-    "placeholder_descripcion": "ej: descripcion",
-    "codigoabreviacion": "codigoabreviacion",
-    "placeholder_codigoabreviacion": "ej: codigoabreviacion",
+    "idtipomovilidad": "Tipo movilidad",
+    "placeholder_idtipomovilidad": "ej: Tipo movilidad",
+    "idtipocategoria": "Tipo categoria",
+    "placeholder_idtipocategoria": "ej: Tipo categoria",
+    "tipocategoria": "tipo categoria",
+    "placeholder_tipocategoria": "ej: tipo categoria",
+    "nombre": "Nombre",
+    "placeholder_nombre": "ej:Nombre",
+    "descripcion": "Descripcion",
+    "placeholder_descripcion": "ej: Descripcion",
+    "codigoabreviacion": "codigo abreviacion",
+    "placeholder_codigoabreviacion": "ej: codigo abreviacion",
     "activo": "activo",
     "placeholder_activo": "ej: activo",
-    "numeroorden": "numeroorden",
-    "placeholder_numeroorden": "ej: numeroorden",
-    "tipomovilidad": "tipomovilidad",
-    "placeholder_tipomovilidad": "ej: tipomovilidad",
-    "entrante": "entrante",
+    "numeroorden": "numero orden",
+    "placeholder_numeroorden": "ej: numero orden",
+    "tipomovilidad": "Ripo movilidad",
+    "placeholder_tipomovilidad": "ej: Tipo movilidad",
+    "entrante": "Entrante",
     "placeholder_entrante": "ej: entrante",
+    "movilidad_academica": "Movilidad academica",
+    "placeholder_movilidad_academica": "ej: Movilidad academica",
+    "apellido": "Apellido",
+    "placeholder_apellido": "ej: Apellido",
+    "identificacion": "identificacion",
+    "placeholder_identificacion": "ej: identificacion",
+    "tipodocumento": "tipo documento",
+    "placeholder_tipodocumento": "ej: tipo documento",
+    "tipopersona": "tipo persona",
+    "placeholder_tipopersona": "ej: tipo persona",
+    "telefono": "telefono",
+    "placeholder_telefono": "ej: telefono",
+    "direccion": "direccion",
+    "placeholder_direccion": "ej: direccion",
+    "pais": "pais",
+    "placeholder_pais": "ej: pais",
+    "nivelacademico": "nivel academico",
+    "placeholder_nivelacademico": "ej: nivel academico",
+    "programaacademico": "programa academico",
+    "placeholder_programaacademico": "ej: programa academico",
+    "organizacion": "organizacion",
+    "placeholder_organizacion": "ej: organizacion",
+    "tipoconvenio": "tipo convenio",
+    "placeholder_tipoconvenio": "ej: tipo convenio",
+    "nit": "nit",
+    "placeholder_nit": "ej: nit",
+    "naturaleza": "naturaleza",
+    "placeholder_naturaleza": "ej: naturaleza",
+    "codigoabreavicion": "codigoabreavicion",
+    "placeholder_codigoabreavicion": "ej: codigoabreavicion",
+    "entidad": "entidad",
+    "placeholder_entidad": "ej: entidad",
+    "correo": "correo",
+    "placeholder_correo": "ej: correo",
+    "idnaturaleza": "idnaturaleza",
+    "placeholder_idnaturaleza": "ej: idnaturaleza",
+    "estados": "estados",
+    "placeholder_estados": "ej: estados",
+    "fechacreacion": "fechacreacion",
+    "placeholder_fechacreacion": "ej: fechacreacion",
+    "fechamodificacion": "fechamodificacion",
+    "placeholder_fechamodificacion": "ej: fechamodificacion",
+    "paiscategoria": "paiscategoria",
+    "placeholder_paiscategoria": "ej: paiscategoria",
+    "categoria": "categoria",
+    "placeholder_categoria": "ej: categoria",
+    "idpaiscategoria": "idpaiscategoria",
+    "placeholder_idpaiscategoria": "ej: idpaiscategoria",
+    "responsable": "responsable",
+    "placeholder_responsable": "ej: responsable",
+    "correoresponsable": "correoresponsable",
+    "placeholder_correoresponsable": "ej: correoresponsable",
+    "enlace": "enlace",
+    "placeholder_enlace": "ej: enlace",
+    "identidad": "identidad",
+    "placeholder_identidad": "ej: identidad",
+    "idestados": "idestados",
+    "placeholder_idestados": "ej: idestados",
     "aceptar": "aceptar",
     "cancelar": "cancelar",
     "salir": "salir",
@@ -86,32 +169,6 @@
     "guardar" : "guardar",
     "formulario": "formulario",
     "lista": "lista",
-    "regresar": "regresar",
-    "movilidad_academica": "movilidad_academica",
-    "placeholder_movilidad_academica": "ej: movilidad_academica",
-    "apellido": "apellido",
-    "placeholder_apellido": "ej: apellido",
-    "identificacion": "identificacion",
-    "placeholder_identificacion": "ej: identificacion",
-    "tipodocumento": "tipodocumento",
-    "placeholder_tipodocumento": "ej: tipodocumento",
-    "tipopersona": "tipopersona",
-    "placeholder_tipopersona": "ej: tipopersona",
-    "telefono": "telefono",
-    "placeholder_telefono": "ej: telefono",
-    "direccion": "direccion",
-    "placeholder_direccion": "ej: direccion",
-    "pais": "pais",
-    "placeholder_pais": "ej: pais",
-    "nivelacademico": "nivelacademico",
-    "placeholder_nivelacademico": "ej: nivelacademico",
-    "programaacademico": "programaacademico",
-    "placeholder_programaacademico": "ej: programaacademico",
-    "organizacion": "organizacion",
-    "placeholder_organizacion": "ej: organizacion",
-    "tipoconvenio": "tipoconvenio",
-    "placeholder_tipoconvenio": "ej: tipoconvenio",
-    "nit": "nit",
-    "placeholder_nit": "ej: nit"
+    "regresar": "regresar"
   }
 }
