--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -27,6 +27,31 @@
       "lista_tipomovilidad": "lista tipomovilidad",
       "crud_tipomovilidad": "Crud tipomovilidad"
     },
+    "naturaleza": {
+      "naturaleza": "naturaleza",
+      "lista_naturaleza": "lista naturaleza",
+      "crud_naturaleza": "Crud naturaleza"
+    },
+    "entidad": {
+      "entidad": "entidad",
+      "lista_entidad": "lista entidad",
+      "crud_entidad": "Crud entidad"
+    },
+    "estados": {
+      "estados": "estados",
+      "lista_estados": "lista estados",
+      "crud_estados": "Crud estados"
+    },
+    "paiscategoria": {
+      "paiscategoria": "paiscategoria",
+      "lista_paiscategoria": "lista paiscategoria",
+      "crud_paiscategoria": "Crud paiscategoria"
+    },
+    "categoria": {
+      "categoria": "categoria",
+      "lista_categoria": "lista categoria",
+      "crud_categoria": "Crud categoria"
+    },
     "convenio": {
       "convenio": "convenio",
       "lista_convenio": "lista convenio",
@@ -76,17 +101,6 @@
     "placeholder_tipomovilidad": "ej: Tipo movilidad",
     "entrante": "Entrante",
     "placeholder_entrante": "ej: entrante",
-    "aceptar": "aceptar",
-    "cancelar": "cancelar",
-    "salir": "salir",
-    "eliminar": "eliminar",
-    "actualizar": "actualizar",
-    "crear": "crear",
-    "registrar": "registrar",
-    "guardar" : "guardar",
-    "formulario": "formulario",
-    "lista": "lista",
-    "regresar": "regresar",
     "movilidad_academica": "Movilidad academica",
     "placeholder_movilidad_academica": "ej: Movilidad academica",
     "apellido": "Apellido",
@@ -112,6 +126,49 @@
     "tipoconvenio": "tipo convenio",
     "placeholder_tipoconvenio": "ej: tipo convenio",
     "nit": "nit",
-    "placeholder_nit": "ej: nit"
+    "placeholder_nit": "ej: nit",
+    "naturaleza": "naturaleza",
+    "placeholder_naturaleza": "ej: naturaleza",
+    "codigoabreavicion": "codigoabreavicion",
+    "placeholder_codigoabreavicion": "ej: codigoabreavicion",
+    "entidad": "entidad",
+    "placeholder_entidad": "ej: entidad",
+    "correo": "correo",
+    "placeholder_correo": "ej: correo",
+    "idnaturaleza": "idnaturaleza",
+    "placeholder_idnaturaleza": "ej: idnaturaleza",
+    "estados": "estados",
+    "placeholder_estados": "ej: estados",
+    "fechacreacion": "fechacreacion",
+    "placeholder_fechacreacion": "ej: fechacreacion",
+    "fechamodificacion": "fechamodificacion",
+    "placeholder_fechamodificacion": "ej: fechamodificacion",
+    "paiscategoria": "paiscategoria",
+    "placeholder_paiscategoria": "ej: paiscategoria",
+    "categoria": "categoria",
+    "placeholder_categoria": "ej: categoria",
+    "idpaiscategoria": "idpaiscategoria",
+    "placeholder_idpaiscategoria": "ej: idpaiscategoria",
+    "responsable": "responsable",
+    "placeholder_responsable": "ej: responsable",
+    "correoresponsable": "correoresponsable",
+    "placeholder_correoresponsable": "ej: correoresponsable",
+    "enlace": "enlace",
+    "placeholder_enlace": "ej: enlace",
+    "identidad": "identidad",
+    "placeholder_identidad": "ej: identidad",
+    "idestados": "idestados",
+    "placeholder_idestados": "ej: idestados",
+    "aceptar": "aceptar",
+    "cancelar": "cancelar",
+    "salir": "salir",
+    "eliminar": "eliminar",
+    "actualizar": "actualizar",
+    "crear": "crear",
+    "registrar": "registrar",
+    "guardar" : "guardar",
+    "formulario": "formulario",
+    "lista": "lista",
+    "regresar": "regresar"
   }
 }
