--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -42,39 +42,39 @@
     }
   },
   "GLOBAL": {
-    "movilidad": "movilidad",
+    "movilidad": "Movilidad",
     "placeholder_movilidad": "ej: movilidad",
     "id": "id",
     "placeholder_id": "ej: id",
     "presupuesto": "presupuesto",
     "placeholder_presupuesto": "ej: presupuesto",
-    "fechainicio": "fechainicio",
-    "placeholder_fechainicio": "ej: fechainicio",
-    "fechafinal": "fechafinal",
-    "placeholder_fechafinal": "ej: fechafinal",
+    "fechainicio": "fecha inicio",
+    "placeholder_fechainicio": "ej: fecha inicio",
+    "fechafinal": "fecha final",
+    "placeholder_fechafinal": "ej: fecha final",
     "persona": "persona",
     "placeholder_persona": "ej: persona",
     "convenio": "convenio",
     "placeholder_convenio": "ej: convenio",
-    "idtipomovilidad": "idtipomovilidad",
-    "placeholder_idtipomovilidad": "ej: idtipomovilidad",
-    "idtipocategoria": "idtipocategoria",
-    "placeholder_idtipocategoria": "ej: idtipocategoria",
-    "tipocategoria": "tipocategoria",
-    "placeholder_tipocategoria": "ej: tipocategoria",
-    "nombre": "nombre",
-    "placeholder_nombre": "ej: nombre",
-    "descripcion": "descripcion",
-    "placeholder_descripcion": "ej: descripcion",
-    "codigoabreviacion": "codigoabreviacion",
-    "placeholder_codigoabreviacion": "ej: codigoabreviacion",
+    "idtipomovilidad": "Tipo movilidad",
+    "placeholder_idtipomovilidad": "ej: Tipo movilidad",
+    "idtipocategoria": "Tipo categoria",
+    "placeholder_idtipocategoria": "ej: Tipo categoria",
+    "tipocategoria": "tipo categoria",
+    "placeholder_tipocategoria": "ej: tipo categoria",
+    "nombre": "Nombre",
+    "placeholder_nombre": "ej:Nombre",
+    "descripcion": "Descripcion",
+    "placeholder_descripcion": "ej: Descripcion",
+    "codigoabreviacion": "codigo abreviacion",
+    "placeholder_codigoabreviacion": "ej: codigo abreviacion",
     "activo": "activo",
     "placeholder_activo": "ej: activo",
-    "numeroorden": "numeroorden",
-    "placeholder_numeroorden": "ej: numeroorden",
-    "tipomovilidad": "tipomovilidad",
-    "placeholder_tipomovilidad": "ej: tipomovilidad",
-    "entrante": "entrante",
+    "numeroorden": "numero orden",
+    "placeholder_numeroorden": "ej: numero orden",
+    "tipomovilidad": "Ripo movilidad",
+    "placeholder_tipomovilidad": "ej: Tipo movilidad",
+    "entrante": "Entrante",
     "placeholder_entrante": "ej: entrante",
     "aceptar": "aceptar",
     "cancelar": "cancelar",
@@ -87,31 +87,33 @@
     "formulario": "formulario",
     "lista": "lista",
     "regresar": "regresar",
-    "movilidad_academica": "movilidad_academica",
-    "placeholder_movilidad_academica": "ej: movilidad_academica",
-    "apellido": "apellido",
-    "placeholder_apellido": "ej: apellido",
+    "movilidad_academica": "Movilidad Academica",
+    "placeholder_movilidad_academica": "ej: Movilidad academica",
+    "apellido": "Apellido",
+    "placeholder_apellido": "ej: Apellido",
     "identificacion": "identificacion",
     "placeholder_identificacion": "ej: identificacion",
-    "tipodocumento": "tipodocumento",
-    "placeholder_tipodocumento": "ej: tipodocumento",
-    "tipopersona": "tipopersona",
-    "placeholder_tipopersona": "ej: tipopersona",
+    "tipodocumento": "tipo documento",
+    "placeholder_tipodocumento": "ej: tipo documento",
+    "tipopersona": "tipo persona",
+    "placeholder_tipopersona": "ej: tipo persona",
     "telefono": "telefono",
     "placeholder_telefono": "ej: telefono",
     "direccion": "direccion",
     "placeholder_direccion": "ej: direccion",
     "pais": "pais",
     "placeholder_pais": "ej: pais",
-    "nivelacademico": "nivelacademico",
-    "placeholder_nivelacademico": "ej: nivelacademico",
-    "programaacademico": "programaacademico",
-    "placeholder_programaacademico": "ej: programaacademico",
+    "nivelacademico": "nivel academico",
+    "placeholder_nivelacademico": "ej: nivel academico",
+    "programaacademico": "programa academico",
+    "placeholder_programaacademico": "ej: programa academico",
     "organizacion": "organizacion",
     "placeholder_organizacion": "ej: organizacion",
-    "tipoconvenio": "tipoconvenio",
-    "placeholder_tipoconvenio": "ej: tipoconvenio",
+    "tipoconvenio": "tipo convenio",
+    "placeholder_tipoconvenio": "ej: tipo convenio",
     "nit": "nit",
-    "placeholder_nit": "ej: nit"
+    "placeholder_nit": "ej: nit",
+    "solicitante":"Solicitante",
+    "programa_academico":"Programa Academico"
   }
 }
