Se realizan cambios en lista convenios

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -147,17 +147,17 @@
     "placeholder_paiscategoria": "ej: paiscategoria",
     "categoria": "categoria",
     "placeholder_categoria": "ej: categoria",
-    "idpaiscategoria": "idpaiscategoria",
+    "idpaiscategoria": "Id País",
     "placeholder_idpaiscategoria": "ej: idpaiscategoria",
-    "responsable": "responsable",
+    "responsable": "Responsable",
     "placeholder_responsable": "ej: responsable",
-    "correoresponsable": "correoresponsable",
+    "correoresponsable": "Correo Responsable",
     "placeholder_correoresponsable": "ej: correoresponsable",
-    "enlace": "enlace",
+    "enlace": "Enlace",
     "placeholder_enlace": "ej: enlace",
-    "identidad": "identidad",
+    "identidad": "Entidad",
     "placeholder_identidad": "ej: identidad",
-    "idestados": "idestados",
+    "idestados": "Estado",
     "placeholder_idestados": "ej: idestados",
     "aceptar": "aceptar",
     "cancelar": "cancelar",
